# connectors

./: CLAUDE.md  README.md  pyproject.toml
.claude/rules/: e2e-tests.md  integration-tests.md  unit-tests.md
connectors/: __init__.py
connectors/browser_auth/: __init__.py  browser.py  localstorage.py
connectors/domain/: operations.py
connectors/domain/bon_appetit/: __init__.py  operations.py  types.py
connectors/domain/chefsteps/: __init__.py  operations.py  types.py
connectors/domain/google_keep/: __init__.py  commands.py  operations.py  types.py
connectors/domain/linkedin/: __init__.py  operations.py  types.py
connectors/domain/nyt_cooking/: __init__.py  operations.py  types.py
connectors/domain/serious_eats/: __init__.py  operations.py  types.py
connectors/infrastructure/: browser.py  chefsteps.py  client.py  google_keep.py
connectors/presentation/: __main__.py
connectors/presentation/cli/: commands.py
tests/: test_bon_appetit.py  test_chefsteps.py  test_google_keep.py  test_google_keep_commands.py  test_linkedin.py  test_nyt_cooking.py  test_operations.py  test_serious_eats.py
